fix(components): fix aligning of items on md-down in Products for Home

--- a/src/components/pages/home/products/products.module.scss
+++ b/src/components/pages/home/products/products.module.scss
@@ -90,6 +90,8 @@
   @include md-down {
     width: 100%;
     max-width: 460px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
